# sdk

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
create-canopy-agent/: README.md  package-lock.json  package.json  tsconfig.json
create-canopy-agent/scripts/: copy-templates.mjs
create-canopy-agent/src/: api.ts  cli.ts  log.ts  scaffold.ts  starters.ts
mcp/: README.md  canopy-ai-mcp-0.0.1.tgz  package-lock.json  package.json  tsconfig.json
mcp/src/: handlers.ts  index.ts
python/: README.md  pyproject.toml
python/canopy_ai/: __init__.py  approval.py  async_client.py  balances.py  client.py  dashboard_urls.py  discover.py  encoding.py  errors.py  fetch.py  langchain.py  mpp_decode.py  openai_agents.py  resolve.py  transport.py  types.py  x402_decode.py
python/canopy_ai/adapters/: __init__.py  anthropic.py  openai.py  vercel.py
python/canopy_ai/integrations/: __init__.py  anthropic.py  langchain.py  openai.py
python/tests/: test_adapters_anthropic.py  test_adapters_openai.py  test_async_client.py  test_budget.py  test_discover.py  test_errors.py  test_fixtures.py  test_ping.py  test_tools.py
shared/: openapi.yaml
shared/fixtures/: README.md  discover_services_empty.json  discover_services_filtered.json  discover_services_policy_blocked.json  mpp_payment_success.json  multichain_routes_to_x402_when_tempo_empty.json  pay_allowed_usdc.json  pay_denied_cap.json  pay_entity_registry.json  pay_idempotent_replay.json  (+5 more)
typescript/: README.md  canopy-ai-sdk-0.0.1.tgz  package-lock.json  package.json  tsconfig.json  tsup.config.ts
(+34 files in other folders)
