[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canopy-ai"
version = "0.0.1"
description = "Client library for Canopy — org treasury wallets with agent-level policy-gated spending."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Canopy" }]
keywords = ["canopy", "agent", "wallet", "x402", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.25",
    "typing-extensions>=4.8; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://www.trycanopy.ai"
Repository = "https://github.com/canopyio/sdk"
Issues = "https://github.com/canopyio/sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["canopy_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"
